--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
 <meta charset="utf-8">
 </head>
 <body>
+  <div id="demo1" class="demo">
 <h1> P I V A L </h1>
+  </div>
 <p> Welcome to Pival</p>
 <p style="margin-top:45px;">
 <img src="pival.jpg">
