--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
 
   <p style="margin-top:20px;">
   <center><img src="pival.jpg">
-  <vertical-align="middle;">
   <p style="margin-top:20px;">
 
     <style>
@@ -28,9 +27,9 @@
     }
     </style>
 
-  <li><a href="index.html"> [Home] </a></li>
-  <li><a href="1.html"> [About] </a></li>
-  <li><a href="2.html"> [Contact] </a></li>
+  <a href="index.html"> [Home] </a>
+  <a href="1.html"> [About] </a>
+  <a href="2.html"> [Contact] </a>
 
 
 <h1>About</h1>
