--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
     background-color: #457CCB;
     color: white;
     float: left;
+    margin-left: -20px;
+    margin-top: -20px;
     width:250px;
     height: 100%;
     position: fixed;
