--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Welcome to </title>
+    <title>Welcome to 피움</title>
     <link rel="shortcut icon" type="image/x-icon" href="icon.ico">
     <style>
     @import url('https://fonts.googleapis.com/css?family=Nanum+Gothic');
