--- a/Downloads.html
+++ b/Downloads.html
@@ -111,7 +111,7 @@
                     <br/>
                     <p><a href="notice.html" a style="text-decoration: none; color: black;"> Notice</a>
                     <br/>
-                    <p><a href="Downloads.html" a style="text-decoration: none; color: black;"> Downloads</a>
+                    <p><a href="Downloads.html" a style="text-decoration: none; color: #f8a1be;"> Downloads</a>
                     <br/>
                     <p><a href="Contact.html" a style="text-decoration: none; color: black;"> Contact</a>
                 
