--- a/about.html
+++ b/about.html
@@ -107,7 +107,7 @@
                 
                     <p><a href="index.html" a style="text-decoration: none; color: black;"> Home</a>
                     <br/>
-                    <p><a href="about.html" a style="text-decoration: none; color: black;"> About</a>
+                    <p><a href="about.html" a style="text-decoration: none; color: #f8a1be;"> About</a>
                     <br/>
                     <p><a href="notice.html" a style="text-decoration: none; color: black;"> Notice</a>
                     <br/>
