--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                 <p style="margin-top:20px;">
                 <img src="piuumeng.jpg">
                 
-                    <p><a href="index.html" a style="text-decoration: none; color: black;"> Home</a>
+                    <p><a href="index.html" a style="text-decoration: none; color: #f8a1be;"> Home</a>
                     <br/>
                     <p><a href="about.html" a style="text-decoration: none; color: black;"> About</a>
                     <br/>
