--- a/notice.html
+++ b/notice.html
@@ -114,7 +114,7 @@
                     <br/>
                     <p><a href="about.html" a style="text-decoration: none; color: black;"> About</a>
                     <br/>
-                    <p><a href="notice.html" a style="text-decoration: none; color: #f8a1be;"> Notice</a>
+                    <p><a href="notice.html" a style="text-decoration: none; color: #458CCA;"> Notice</a>
                     <br/>
                     <p><a href="Downloads.html" a style="text-decoration: none; color: black;"> Downloads</a>
                     <br/>
