--- a/Contact.html
+++ b/Contact.html
@@ -121,7 +121,7 @@
                     <br/>
                     <p><a href="Downloads.html" a style="text-decoration: none; color: black;"> Downloads</a>
                     <br/>
-                    <p><a href="Contact.html" a style="text-decoration: none; color: #f8a1be;"> Contact</a>
+                    <p><a href="Contact.html" a style="text-decoration: none; color: #458CCA;"> Contact</a>
                 
             </nav>
             <main>
