--- a/notice.html
+++ b/notice.html
@@ -125,25 +125,17 @@
                 <p style="margin-top:70px;">
                 <img src="notice.jpg">
                 <p style="margin-bottom: 45px;">
-                    <div class="row">
-                        <table class="table table-striped" style="text-align: center; border: 0.5px solid #black">
-                            <thead>
-                                <tr>
-                                    <th style="background-color: #eeeeee; text-align: center;">　번　호　</th>
-                                    <th style="background-color: #eeeeee; text-align: center;">　내　용　</th>
-                                    <th style="background-color: #eeeeee; text-align: center;">　　작성자　　</th>
-                                    <th style="background-color: #eeeeee; text-align: center;">　　작성일　　</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <td>1</td>
-                                <td>　　　　　　　　　　　　　　　test1.　　　　　　　　　　　　　　　</td>
-                                <td>PIUUM</td>
-                                <td>2018-08-27</td>
-                            </tbody>
-                        </table>
-                        <p style="margin-bottom: 100px;"></p>
-                    </div>
+                    <tr>
+                    <td colspan="8" height="800" align="center" style="padding-top:50px;">
+
+
+                    <iframe src="http://mykim5005.dothome.co.kr/bbs/board.php?bo_table=Notice"
+
+                    width="700" frameborder="0"  height="800" scrolling="no"></iframe>
+
+
+                    </td>
+                    </tr>
             </main>
             <aside>
                 <br/><br/><br/>
